--- a/sea-battle/package.json
+++ b/sea-battle/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "grommet": "^2.42.0",
+    "grommet-icons": "^4.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
