--- a/sea-battle/package.json
+++ b/sea-battle/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^18.3.1",
     "grommet": "^2.42.0",
     "grommet-icons": "^4.12.1",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
